# WeirdNLPs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WeirdNLPs.code-workspace  export_model.py  pyproject.toml  test_all_please.py  test_outside_all.py  test_smartness.py
bindings/: bindings.cpp
data/: english_vocab.txt  example_model.pt  mini_glove.txt  ner_lexicon.txt  pos_lexicon.txt  sample_text.txt  sentiment_lexicon.txt
examples/: example_pipeline.cpp
include/: corpus.hpp  deep_models.hpp  embeddings.hpp  lemmatization.hpp  markov_chain.hpp  ml_models.hpp  ner.hpp  sentiment.hpp  stemming.hpp  syntax.hpp  tokenization.hpp  utils.hpp  vectorization.hpp  weirdnlp.hpp
src/: corpus.cpp  deep_models.cpp  embeddings.cpp  lemmatization.cpp  markov_chain.cpp  ml_models.cpp  ner.cpp  sentiment.cpp  stemming.cpp  syntax.cpp  tokenization.cpp  utils.cpp  vectorization.cpp
tests/: test_corpus.cpp  test_deep_models.cpp  test_embeddings.cpp  test_lemmatization.cpp  test_markov_chain.cpp  test_ml_models.cpp  test_ner.cpp  test_sentiment.cpp  test_stemming.cpp  test_syntax.cpp  test_tokenization.cpp  test_utils.cpp  test_vectorization.cpp
weirdnlp/: __init__.py
